Fix dark mode issues in docs, blog, nav

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,18 +42,17 @@
   --bg-color: var(--bg-color-l);
 
   --bg-primary-highlight: #12112b; /* A color that is used in gradients w/ the bg color to add depth */
-  --highlight-color: var(--black);
+  --highlight-color: #ffffff;
   --primary-color: #4636f5;
   --primary-color-rgb: 70, 54, 245;
-  --stroke-color: #525661;
+  --stroke-color: #D3D3DF;
   --stroke-color-light: #80848e;
-  --font-color-primary: var(--color-white);
-  --font-color-secondary: #acb2c2;
-  --link-color: #dfe2e9;
+  --font-color-primary: var(--color-almost-black);
+  --font-color-secondary: rgb(71, 85, 105);
+  --link-color: var(--color-iris-100);
   --bg-feint-color: #f7f8f9;
 
-
-  --box-shadow: 0 1px 1rem 1rem rgba(255, 255, 255, 0.1);
+  --box-shadow: 0 1px 1rem 1rem rgba(0, 0, 0, 0.1);
 
   --grid-line-color: #414652cc;
   --grid-gap: 30px;
@@ -73,25 +72,20 @@
   font-size: 20px;
   font-family: var(--font);
   color: var(--font-color-primary);
-
 }
 
 * {
   transition: box-shadow .3s;
 }
 
-body.light-theme {
-  --bg-color: var(--bg-color-l);
-  /* --bg-primary-highlight: #fafafa; */
-  --highlight-color: #ffffff;
-  --stroke-color: #D3D3DF;
-  --stroke-color-light: #80848e;
-  --font-color-primary: var(--color-almost-black);
-  --font-color-secondary: rgb(71, 85, 105);
-  --link-color: var(--color-iris-100);
-
-  --box-shadow: 0 1px 1rem 1rem rgba(0, 0, 0, 0.1);
-
+/** Themes - Light is default */
+body.dark-theme {
+  --bg-color: var(--bg-color-d);
+  --highlight-color: var(--black);
+  --stroke-color: #525661;
+  --font-color-primary: var(--color-white);
+  --font-color-secondary: #acb2c2;
+  --box-shadow: 0 1px 1rem 1rem rgba(255, 255, 255, 0.1);
   color: var(--font-color-primary);
 }
 
